Feat: Refactor Map Detail and Map Play Info
- Change completed count and recent activated node
