# map/dtos/response_dtos.py
@@ -63,30 +63,6 @@ class MapPopularListResponseDTO(BaseModel):
     maps: List[MapListItemDTO]
 
 
-class MapDetailRecentActivatedNodeDTO(BaseModel):
-    id: int
-    name: str
-    map_play_title: str
-    activated_at: datetime
-
-
-class MapDetailProgressDTO(BaseModel):
-    completed_node_count: int
-    total_node_count: int
-    percentage: int
-    recent_activated_nodes: List[MapDetailRecentActivatedNodeDTO]
-
-    @staticmethod
-    def from_map(map_obj: 'Map') -> 'MapDetailProgressDTO':
-        # TODO: 실제 진행 상황 계산 로직 구현
-        return MapDetailProgressDTO(
-            completed_node_count=0,
-            total_node_count=map_obj.nodes.count(),
-            percentage=0,
-            recent_activated_nodes=[]
-        )
-
-
 class MapDetailDTO(BaseModel):
     id: int
     name: str
@@ -95,23 +71,23 @@ class MapDetailDTO(BaseModel):
     view_count: int
     is_subscribed: bool
     icon_image: str
+    is_private: bool
     background_image: str
     created_by: MapListCreatedBy
-    progress: Optional[MapDetailProgressDTO]
     created_at: datetime
 
     @staticmethod
-    def from_entity(map_obj: 'Map', progress: MapDetailProgressDTO, is_subscribed: bool = False) -> 'MapDetailDTO':
+    def from_entity(map_obj: 'Map', is_subscribed: bool = False) -> 'MapDetailDTO':
         return MapDetailDTO(
             id=map_obj.id,
             name=map_obj.name,
             description=map_obj.description,
             subscriber_count=map_obj.subscriber_count,
             view_count=map_obj.view_count,
+            is_private=map_obj.is_private,
             is_subscribed=is_subscribed,
             icon_image=map_obj.icon_image,
             background_image=map_obj.background_image,
             created_by=MapListCreatedBy.from_entity(map_obj.created_by),
-            progress=progress,
             created_at=map_obj.created_at
         )
